--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,42 @@
 {
-    "extends": [
-        "airbnb",
-        "airbnb-typescript"
-    ],
-    "parserOptions": {
-        "project":"./tsconfig.json"
+    "env": {
+      "browser": true,
+      "es2021": true
     },
+    "extends": ["airbnb", "airbnb/hooks", "eslint:recommended", "prettier"],
+    "overrides": [],
+    "parserOptions": {
+      "ecmaVersion": "latest",
+      "sourceType": "module"
+    },
+    "plugins": ["prettier", "react", "react-hooks"],
     "rules": {
-        "no-shadow": "off",
-        "@typescript-eslint/no-shadow": "off"
-
-      }
-    
-}
+      "react/react-in-jsx-scope": 0,
+      "react-hooks/rules-of-hooks": "error",
+      "no-console": 0,
+      "react/state-in-constructor": 0,
+      "indent": 0,
+      "linebreak-style": 0,
+      "react/prop-types": 0,
+      "react/jsx-props-no-spreading": "off",
+      "jsx-a11y/click-events-have-key-events": 0,
+      "react/jsx-filename-extension": [
+        1,
+        {
+          "extensions": [".js", ".jsx"]
+        }
+      ],
+      "prettier/prettier": [
+        "error",
+        {
+          "trailingComma": "es5",
+          "singleQuote": true,
+          "printWidth": 100,
+          "tabWidth": 2,
+          "semi": true,
+          "endOfLine": "auto"
+        }
+      ]
+    }
+  }
+  
